fix(dialog): full max width & height on mobile

--- a/packages/dialog/src/dialog.pcss
+++ b/packages/dialog/src/dialog.pcss
@@ -31,7 +31,13 @@
   }
 
   &:modal {
+    max-height: 100vh;
+    max-width: 100vw;
     position: fixed;
+
+    @media (--sds-base-breakpoint-tablet) {
+      max-width: var(--sds-base-breakpoint-tablet);
+    }
   }
 
   &[open] {
